--- a/.gitignore
+++ b/.gitignore
@@ -162,3 +162,15 @@ cython_debug/
 #.idea/
 
 .terraform/
+# Ignore Terraform files
+*.tfstate           # State files
+*.tfstate.*         # State backup files
+.terraform/         # Terraform working directory
+crash.log           # Crash log file
+terraform.tfvars    # Variables file (often contains sensitive information)
+terraform.tfvars.json # JSON format variables file
+override.tf         # Override config file
+override.tf.json    # Override JSON config
+*.auto.tfvars       # Automatically loaded variable definitions
+*.auto.tfvars.json  # JSON format automatically loaded variables
+.plan               # Terraform plan files
